# oblig-3-data-1300

./: Dockerfile  README.md  pyproject.toml
data/: health_records.json
src/health_app/: api.py  data.py
tests/: test_data.py  test_health.py
