[project]
name = "health-app"
version = "0.1.0"
description = "A simple health and BMI tracker"
authors = [{ name = "Nikodem", email = "denegos11@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["fastapi (>=0.136.1,<0.137.0)", "uvicorn (>=0.47.0,<0.48.0)", "pydantic (>=2.13.4,<3.0.0)"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
[tool.pytest.ini_options]
pythonpath = ["src"]